# m-work

./: .gitignore  README.md  go.mod
arts/: 01.jl  02.jl  r01.jl  r02-2(12).jl.html  r02-2(24).jl.html  r02-2(3).jl.html  r02-2(4).jl.html  r02-2(6).jl.html  r02-2(8).jl.html  r02-2.jl  r02.jl
docs/: index.html  sw03.jl.html
docs/dw/: w02.jl.html  w03.jl.html  w04.jl.html  w05.jl.html  w06.jl.html
labs/: cuda.jl  index.jl
labs/AI/: .RData  .Rhistory  flux01.jl  flux01.jl.html  flux02.jl  gensim.docx  gensim.ipynb  knet.jl  knet01.jl  knet02.jl  lstm.jl  nn-r.html  nn-r.ipynb  w02.jl  w03-1.jl  w03.jl  w06.jl  w07.jl  w2v.Rmd  w2v.html
labs/Big/: data-means.csv  data.sqlite  sw01.jl  tree.json  w01.jl  ХарченкоЮБ.w01.jl.html
labs/DM/: exam.jl  w01.jl  w01.jl.html  w02.jl  w02.jl.html  w03.jl  w03.jl.html  w04.jl  w04.jl.html  w05.jl  w05.jl.html  w06.jl  w06.jl.html  w07.jl  w07.jl.html
labs/DW/: cproj.jl  fig03.txt  kp01 (copy).jl  kp01.jl  kp02.jl  nw01.jl  topology.txt  (+15 more)
research/: Project.toml  Russell, Stuart; Norvig, Peter. "Preface To Artificial Intelligence: A Modern Approach".txt  backtr.jl  bratko01.jl  bratko02.jl  bratko03.jl  bratko04.jl  catlab01.jl  catlab02.jl  datum.jl  document.jl  duckdb01.jl  fsets.jl  gomoku.jl  graphplot.jl  java.jl  kb.jl  kitten.jl  macros.jl  match-j.jl  match.jl  metatheory.jl  mongo.jl  mwork01.jl  mwork02.jl  mwork03.jl  mwork04.jl  mwork05.jl  mwork06.jl  mwork07.jl  mwork08.jl  mwork09.jl  mwork10.jl  query.jl  terminus.jl  test01.txt  text01.jl  utils.jl
work/gui/: build.sh  meson.build
work/gui/src/: main.vala
(+296 files in other folders)
